--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         </div>
                     </a>
                     <a class="menu-item" id="messages-notifications">
-                        <span><i class="uil uil-envelope"><small class="notification-count">6</small></i></span><h3>Messages</h3>
+                        <span><i class="uil uil-envelope"><small class="notification-count" id="Messages-count">6</small></i></span><h3>Messages</h3>
                     </a>
                     <a class="menu-item">
                         <span><i class="uil uil-bookmark"></i></span><h3>Bookmarks</h3>
@@ -117,7 +117,7 @@
                     <a class="menu-item">
                         <span><i class="uil uil-chart-line"></i></span><h3>Analytics</h3>
                     </a>
-                    <a class="menu-item">
+                    <a class="menu-item" id="theme">
                         <span><i class="uil uil-palette"></i></span><h3>Theme</h3>
                     </a>
                     <a class="menu-item">
@@ -491,7 +491,7 @@
                     <!-- search bar -->
                     <div class="search-bar">
                         <i class="uil uil-search"></i>
-                        <input type="search" placeholder="Search messages" id="messages-search">
+                        <input type="search" placeholder="Search messages" id="message-search">
                     </div>
                     <!-- messages category -->
                     <div class="category">
@@ -675,5 +675,6 @@
         </div>
     </div>
 
+    <script src="main.js"></script>
 </body>
 </html>
