image path corrected

--- a/index.html
+++ b/index.html
@@ -133,37 +133,37 @@
                 <div class="stories">
                     <div class="story">
                         <div class="profile-photo">
-                            <img src="/images/profile-8.jpg" alt="pic">
+                            <img src="images/profile-1.jpg" alt="pic">
                         </div>
                         <p class="name">Your Story</p>
                     </div>
                     <div class="story">
                         <div class="profile-photo">
-                            <img src="/images/profile-9.jpg" alt="pic">
+                            <img src="images/profile-9.jpg" alt="pic">
                         </div>
                         <p class="name">Lilla James</p>
                     </div>
                     <div class="story">
                         <div class="profile-photo">
-                            <img src="/images/profile-10.jpg" alt="pic">
+                            <img src="images/profile-10.jpg" alt="pic">
                         </div>
                         <p class="name">Winnie hale</p>
                     </div>
                     <div class="story">
                         <div class="profile-photo">
-                            <img src="/images/profile-11.jpg" alt="pic">
+                            <img src="images/profile-11.jpg" alt="pic">
                         </div>
                         <p class="name">Daniel Beal</p>
                     </div>
                     <div class="story">
                         <div class="profile-photo">
-                            <img src="/images/profile-12.jpg" alt="pic">
+                            <img src="images/profile-12.jpg" alt="pic">
                         </div>
                         <p class="name">Jemes Roy</p>
                     </div>
                     <div class="story">
                         <div class="profile-photo">
-                            <img src="/images/profile-13.jpg" alt="pic">
+                            <img src="images/profile-13.jpg" alt="pic">
                         </div>
                         <p class="name">Tina Roy</p>
                     </div>
